--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "use-antd-resizable-header",
-  "version": "2.9.5",
+  "name": "@7fresh/use-antd-resizable-header",
+  "version": "1.0.0",
   "description": "antd resizable header column hook",
   "type": "module",
   "keywords": [
